# mp2i-library-c

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
src/ds/: deque.h
src/ds/deque/: deque.c  deque.h
tests/ds/: test_deque.c
